Add deploy button and update render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,10 @@ services:
   - type: web
     name: everfresh-pricelist-api
     runtime: node
+    plan: free
     buildCommand: npm install
-    startCommand: node server.js
+    startCommand: npm start
+    healthCheckPath: /
     envVars:
       - key: NODE_VERSION
         value: 18.19.0
